--- a/.github/workflows/jacktriplabs.yml
+++ b/.github/workflows/jacktriplabs.yml
@@ -141,8 +141,8 @@ jobs:
             brew link qt5 --force
           fi
           if [[ "${{ matrix.system-rtaudio }}" == true ]]; then 
-            brew install rt-audio
-            rm -f `brew --prefix rt-audio`/lib/*.dylib # remove the shared library, we want static only
+            brew install rtaudio
+            rm -f `brew --prefix rtaudio`/lib/*.dylib # remove the shared library, we want static only
           fi
           if [[ -n "${{ matrix.installer-path }}" ]]; then
             brew install packages
