--- a/meson.build
+++ b/meson.build
@@ -106,14 +106,16 @@ else
 		src += [
 			'src/gui/virtualstudio.cpp',
 			'src/gui/vsServerInfo.cpp',
-			'src/gui/vsQuickView.cpp'
+			'src/gui/vsQuickView.cpp',
+			'src/gui/vsWebSocket.cpp'
 		]
 		moc_h += [
 			'src/gui/virtualstudio.h',
 			'src/gui/vsServerInfo.h',
-			'src/gui/vsQuickView.h'
+			'src/gui/vsQuickView.h',
+			'src/gui/vsWebSocket.h'
 		]
-		qt5_dep = dependency('qt5', modules: ['Core', 'Gui', 'Network', 'Widgets', 'Quick', 'Qml', 'Svg', 'NetworkAuth'], include_type: 'system')
+		qt5_dep = dependency('qt5', modules: ['Core', 'Gui', 'Network', 'Widgets', 'Quick', 'Qml', 'Svg', 'NetworkAuth', 'WebSockets'], include_type: 'system')
 		qres = ['src/gui/qjacktrip.qrc']
 	endif
 
