--- a/meson.build
+++ b/meson.build
@@ -30,7 +30,8 @@ src = [	'src/DataProtocol.cpp',
 	'src/Regulator.cpp',
 	'src/Settings.cpp',
 	'src/UdpDataProtocol.cpp',
-	'src/IcmpDataProtocol.cpp',
+	'src/vsPinger.cpp',
+	'src/vsPing.cpp',
 	'src/UdpHubListener.cpp',
 	'src/AudioInterface.cpp',
 	'src/Compressor.cpp',
@@ -46,7 +47,8 @@ moc_h = ['src/DataProtocol.h',
 	'src/PacketHeader.h',
 	'src/Settings.h',
 	'src/UdpDataProtocol.h',
-	'src/IcmpDataProtocol.h',
+	'src/vsPinger.h',
+	'src/vsPing.h',
 	'src/UdpHubListener.h',
 	'src/Auth.h',
 	'src/SslServer.h']
