--- a/macos/JackTrip.app_template/Contents/Info.plist
+++ b/macos/JackTrip.app_template/Contents/Info.plist
@@ -16,10 +16,17 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>%BUNDLENAME%</string>
-	<key>CFBundleURLSchemes</key>
-	<array>
-		<string>jacktrip</string>
-	</array>
+	<key>CFBundleURLTypes</key>
+		<array>
+			<dict>
+				<key>CFBundleURLSchemes</key>
+					<array>
+						<string>jacktrip</string>
+					</array>
+				<key>CFBundleTypeRole</key>
+				<string>Editor</string>
+			</dict>
+		</array>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
