--- a/meson.build
+++ b/meson.build
@@ -30,8 +30,6 @@ src = [	'src/DataProtocol.cpp',
 	'src/Regulator.cpp',
 	'src/Settings.cpp',
 	'src/UdpDataProtocol.cpp',
-	'src/vsPinger.cpp',
-	'src/vsPing.cpp',
 	'src/UdpHubListener.cpp',
 	'src/AudioInterface.cpp',
 	'src/Compressor.cpp',
@@ -47,8 +45,6 @@ moc_h = ['src/DataProtocol.h',
 	'src/PacketHeader.h',
 	'src/Settings.h',
 	'src/UdpDataProtocol.h',
-	'src/vsPinger.h',
-	'src/vsPing.h',
 	'src/UdpHubListener.h',
 	'src/Auth.h',
 	'src/SslServer.h']
@@ -112,14 +108,19 @@ else
 			'src/gui/vsDevice.cpp',
 			'src/gui/vsServerInfo.cpp',
 			'src/gui/vsQuickView.cpp',
-			'src/gui/vsWebSocket.cpp'
+			'src/gui/vsWebSocket.cpp',
+			'src/vsPinger.cpp',
+			'src/vsPing.cpp'
+
 		]
 		moc_h += [
 			'src/gui/virtualstudio.h',
 			'src/gui/vsDevice.h',
 			'src/gui/vsServerInfo.h',
 			'src/gui/vsQuickView.h',
-			'src/gui/vsWebSocket.h'
+			'src/gui/vsWebSocket.h',
+			'src/vsPinger.h',
+			'src/vsPing.h'
 		]
 		qt5_dep = dependency('qt5', modules: ['Core', 'Gui', 'Network', 'Widgets', 'Quick', 'Qml', 'Svg', 'NetworkAuth', 'WebSockets'], include_type: 'system')
 		qres = ['src/gui/qjacktrip.qrc']
