--- a/linux/org.jacktrip.JackTrip.desktop.in
+++ b/linux/org.jacktrip.JackTrip.desktop.in
@@ -7,3 +7,4 @@ Exec=/bin/bash -c "if [-z "%u"]; then jacktrip & echo "hey"; else echo "hey hey"
 Icon=@icon@
 Terminal=false
 StartupWMClass=@wmclass@
+MimeType=application/jacktrip
