--- a/linux/org.jacktrip.JackTrip.desktop.in
+++ b/linux/org.jacktrip.JackTrip.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 Name=JackTrip@name_suffix@
 Comment=Network Music Performance over the Internet
 Comment[fr]=Performance de musique en réseau sur internet
-Exec=/bin/bash -c "if [-z "%u"]; then jacktrip & echo "hey"; else echo "hey hey" & jacktrip --gui --deeplink %u; fi"
+Exec=jacktrip --gui --deeplink %u
 Icon=@icon@
 Terminal=false
 StartupWMClass=@wmclass@
