--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -23,7 +23,33 @@ on:
   schedule:
     - cron:  '0 0 * * 0' # run weekly to refresh static Qt cache
 jobs:
+  check-secrets:
+    name: Check if secrets exist to determine if build & sign run
+    runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.setvar.outputs.should_run }}
+    steps:
+      - id: setvar
+        run: |
+          if [[ "${{ secrets.APP_SIGNING_CERT_BASE64 }}" != "" && \
+                "${{ secrets.INSTALLER_SIGNING_CERT_BASE64 }}" != "" && \
+                "${{ secrets.CERT_PASSPHRASE }}" != "" && \
+                "${{ secrets.APP_CERT_NAME }}" != "" && \
+                "${{ secrets.INSTALLER_CERT_NAME }}" != "" && \
+                "${{ secrets.APPLE_APP_SPECIFIC_PWD }}" != "" && \
+                "${{ secrets.TOTP_SECRET }}" != "" && \
+                "${{ secrets.ESIGNER_CREDENTIAL_ID }}" != "" && \
+                "${{ secrets.SSL_COM_PWD }}" != "" && \
+                "${{ secrets.KEYCHAIN_PWD }}" != "" ]]; \
+          then
+            echo "Secrets to sign artifacts were configured in the repo"
+            echo "should_run=true" >> $GITHUB_OUTPUT
+          else
+            echo "Secrets to sign artifacts were not configured in the repo"
+            echo "should_run=false" >> $GITHUB_OUTPUT
+          fi
   build:
+    needs: check-secrets
     runs-on: ${{ matrix.runs-on }}
     name: ${{ matrix.name }}
     strategy:
@@ -235,27 +261,6 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "name=$NAME" >> $GITHUB_OUTPUT
           echo "stamp=$(date '+%Y-%m-%d')" >> $GITHUB_OUTPUT # set timestamp for cache
-      - name: check if secrets are available
-        id: check-secrets
-        shell: bash
-        run: |
-          if [[ "${{ secrets.APP_SIGNING_CERT_BASE64 }}" != "" && \
-                "${{ secrets.INSTALLER_SIGNING_CERT_BASE64 }}" != "" && \
-                "${{ secrets.CERT_PASSPHRASE }}" != "" && \
-                "${{ secrets.APP_CERT_NAME }}" != "" && \
-                "${{ secrets.INSTALLER_CERT_NAME }}" != "" && \
-                "${{ secrets.APPLE_APP_SPECIFIC_PWD }}" != "" && \
-                "${{ secrets.TOTP_SECRET }}" != "" && \
-                "${{ secrets.ESIGNER_CREDENTIAL_ID }}" != "" && \
-                "${{ secrets.SSL_COM_PWD }}" != "" && \
-                "${{ secrets.KEYCHAIN_PWD }}" != "" ]]; \
-          then
-            echo "Secrets to sign artifacts were configured in the repo"
-            echo "available=true" >> $GITHUB_OUTPUT
-          else
-            echo "Secrets to sign artifacts were not configured in the repo"
-            echo "available=false" >> $GITHUB_OUTPUT
-          fi
       - name: setup python
         uses: actions/setup-python@v3
         with:
@@ -479,7 +484,7 @@ jobs:
           fi
           desktop-file-validate $DESKTOP_FILE_PATH
       - name: set signing secrets for macOS
-        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && steps.check-secrets.outputs.available == 'true'
+        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && needs.check-secrets.outputs.should_run == 'true'
         shell: bash
         env:
           APP_SIGNING_CERT_BASE64: ${{ secrets.APP_SIGNING_CERT_BASE64}}
@@ -533,7 +538,7 @@ jobs:
             CONFIG="-i $CONFIG"
           fi
           SIGNED=
-          if [[ "${{ steps.check-secrets.outputs.available }}" == "true" ]]; then 
+          if [[ "${{  needs.check-secrets.outputs.should_run }}" == "true" ]]; then 
             CONFIG="$CONFIG -n -k -c \"${CERTIFICATE}\" -d \"${PACKAGE_CERT}\" -u \"${USERNAME}\" -p \"${PASSWORD}\" -t \"${TEAM_ID}\" JackTrip org.jacktrip.jacktrip"
             SIGNED="-signed"
             echo "Secrets are available, the binaries will be signed."
@@ -568,47 +573,22 @@ jobs:
           path: ${{ env.BUILD_PATH }}/${{ matrix.binary-path }}
       - name: upload application bundle
         uses: actions/upload-artifact@v2
-        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && steps.check-secrets.outputs.available != 'true'
+        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) &&  needs.check-secrets.outputs.should_run != 'true'
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-application
           path: ${{ env.BUILD_PATH }}/${{ matrix.bundle-path }}
       - name: upload signed application bundle
         uses: actions/upload-artifact@v2
-        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && steps.check-secrets.outputs.available == 'true'
+        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) &&  needs.check-secrets.outputs.should_run == 'true'
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-signed-application
           path: ${{ env.BUILD_PATH }}/${{ matrix.bundle-path }}
       - name: upload installer
         uses: actions/upload-artifact@v2
-        if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && (steps.check-secrets.outputs.available != 'true' || runner.os == 'Windows')
+        if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ( needs.check-secrets.outputs.should_run != 'true' || runner.os == 'Windows')
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
-  check-secrets:
-    name: Check if secrets exist to determine if build & sign run
-    runs-on: ubuntu-latest
-    outputs:
-      should_run: ${{ steps.setvar.outputs.should_run }}
-    steps:
-      - id: setvar
-        run: |
-          if [[ "${{ secrets.APP_SIGNING_CERT_BASE64 }}" != "" && \
-                "${{ secrets.INSTALLER_SIGNING_CERT_BASE64 }}" != "" && \
-                "${{ secrets.CERT_PASSPHRASE }}" != "" && \
-                "${{ secrets.APP_CERT_NAME }}" != "" && \
-                "${{ secrets.INSTALLER_CERT_NAME }}" != "" && \
-                "${{ secrets.APPLE_APP_SPECIFIC_PWD }}" != "" && \
-                "${{ secrets.TOTP_SECRET }}" != "" && \
-                "${{ secrets.ESIGNER_CREDENTIAL_ID }}" != "" && \
-                "${{ secrets.SSL_COM_PWD }}" != "" && \
-                "${{ secrets.KEYCHAIN_PWD }}" != "" ]]; \
-          then
-            echo "Secrets to sign artifacts were configured in the repo"
-            echo "should_run=true" >> $GITHUB_OUTPUT
-          else
-            echo "Secrets to sign artifacts were not configured in the repo"
-            echo "should_run=false" >> $GITHUB_OUTPUT
-          fi
   sign:
     needs: [build, check-secrets]
     if: needs.check-secrets.outputs.should_run == 'true'
