--- a/.github/workflows/mkdocs-preview.yml
+++ b/.github/workflows/mkdocs-preview.yml
@@ -19,8 +19,12 @@ jobs:
           echo "use_directory_urls: false" >> mkdocs.yml
       - name: Render docs 
         run: mkdocs build
+      - name: Move to a subdirectory
+        run: |
+          mkdir docs-upload
+          mv site docs-upload/JackTrip-docs-${{ github.sha }}
       - name: Upload docs for preview
         uses: actions/upload-artifact@v3
         with:
           name: JackTrip-docs-${{ github.sha }}
-          path: site/
+          path: docs-upload
