--- a/meson.build
+++ b/meson.build
@@ -38,6 +38,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/Meter.cpp',
 	'src/Volume.cpp',
 	'src/Tone.cpp',
+	'src/StereoToMono.cpp',
 	'src/Reverb.cpp',
 	'src/main.cpp',
 	'src/SslServer.cpp',
@@ -47,6 +48,7 @@ moc_h = ['src/DataProtocol.h',
 	'src/JackTrip.h',
 	'src/ProcessPlugin.h',
 	'src/Meter.h',
+	'src/StereoToMono.h',
 	'src/Volume.h',
 	'src/Tone.h',
 	'src/JackTripWorker.h',
